--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
                   <li><strong>Location: </strong>{{info.location}} </li>
                   <li><strong>Company Name: </strong>{{info.companyName}} </li>
                   <li><strong>Job Description: </strong>{{info.summary}} </li>
-                  <li><strong>Link: </strong><a href="{{info.url}}"></a>View More</li>
+                  <li><strong>Link: </strong><a href="{{info.url}}">View More</a></li>
                 </ul>
                   {% endif %}
                   {% endfor %}
